[gd_scene load_steps=4 format=3 uid="uid://on6ralr0jx4u"]

[ext_resource type="Script" path="res://start_screen.gd" id="1_ai81h"]
[ext_resource type="Theme" uid="uid://7vsyfmueweyk" path="res://theme/main_theme.tres" id="2_0rssw"]
[ext_resource type="Texture2D" uid="uid://c5b54wtjthlb7" path="res://assets/images/original-black-leather-texture-background.jpg" id="3_xbsr0"]

[node name="StartScreen" type="Node2D"]
script = ExtResource("1_ai81h")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_xbsr0")
ignore_texture_size = true

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -41.0
offset_right = 127.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_0rssw")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Port"

[node name="HostPortInput" type="LineEdit" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "1234"
max_length = 5

[node name="HostButton" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Host"

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer2"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer2/VBoxContainer2"]
layout_mode = 2
columns = 2

[node name="Label3" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer2/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "Player Name:"

[node name="PlayerNameInput" type="LineEdit" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer2/VBoxContainer2/GridContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
placeholder_text = "raisin man"
max_length = 32

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer2/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "Address"

[node name="ClientAddressInput" type="LineEdit" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer2/VBoxContainer2/GridContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
placeholder_text = "127.0.0.1"
max_length = 39

[node name="Label2" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer2/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "Port"

[node name="ClientPortInput" type="LineEdit" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer2/VBoxContainer2/GridContainer"]
layout_mode = 2
placeholder_text = "1234"
max_length = 5

[node name="JoinButton" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer2/VBoxContainer2"]
layout_mode = 2
text = "Join"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Leather Background Texture: [url=\"https://www.freepik.com/free-photo/original-black-leather-texture-background_15340308.htm\"]denamorado on Freepik[/url]
Typewriter font: [url]dafont.com/another-typewriter.font[/url]"
fit_content_height = true

[node name="Toggles" type="MarginContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_0rssw")

[node name="Panel" type="PanelContainer" parent="CanvasLayer/Toggles"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Toggles/Panel"]
layout_mode = 2

[node name="ToggleContainer" type="GridContainer" parent="CanvasLayer/Toggles/Panel/MarginContainer"]
layout_mode = 2
columns = 2

[node name="EnableParticles" type="CheckButton" parent="CanvasLayer/Toggles/Panel/MarginContainer/ToggleContainer"]
layout_mode = 2
button_pressed = true
text = "particles"

[node name="EnableAnnoyingSounds" type="CheckButton" parent="CanvasLayer/Toggles/Panel/MarginContainer/ToggleContainer"]
layout_mode = 2
button_pressed = true
text = "annoying_sounds"

[node name="EnableWeapons" type="CheckButton" parent="CanvasLayer/Toggles/Panel/MarginContainer/ToggleContainer"]
layout_mode = 2
button_pressed = true
text = "weapons"

[node name="EnableMessages" type="CheckButton" parent="CanvasLayer/Toggles/Panel/MarginContainer/ToggleContainer"]
layout_mode = 2
button_pressed = true
text = "messages"

[node name="EnableEnemies" type="CheckButton" parent="CanvasLayer/Toggles/Panel/MarginContainer/ToggleContainer"]
layout_mode = 2
button_pressed = true
text = "enemies"

[node name="MegaProjectiles" type="CheckButton" parent="CanvasLayer/Toggles/Panel/MarginContainer/ToggleContainer"]
layout_mode = 2
text = "mega_projectiles"
